Update Hungarian translation.

--- a/src/main/resources/assets/maple/lang/hu_hu.existing.json
+++ b/src/main/resources/assets/maple/lang/hu_hu.existing.json
@@ -27,6 +27,7 @@
   "block.maple.cherry_stairs": "Cseresznyefa lépcső",
   "block.maple.cherry_trapdoor": "Cseresznyefa csapóajtó",
   "block.maple.cherry_wood": "Cseresznyefablokk",
+  "block.maple.deepslate_salt_ore": "Deepslate Salt Ore",
   "block.maple.maple_button": "Juharfagomb",
   "block.maple.maple_door": "Juharfaajtó",
   "block.maple.maple_fence": "Juharfakerítés",
@@ -41,12 +42,39 @@
   "block.maple.maple_stairs": "Juharfa lépcső",
   "block.maple.maple_trapdoor": "Juharfa csapóajtó",
   "block.maple.maple_wood": "Juharfablokk",
+  "block.maple.potted_cherry_sapling": "Potted Cherry Sapling",
+  "block.maple.potted_maple_sapling": "Potted Maple Sapling",
+  "block.maple.potted_sakura_sapling": "Potted Sakura Sapling",
+  "block.maple.rice_plant": "Crop Rice",
+  "block.maple.sakura_leaves": "Sakura",
+  "block.maple.sakura_sapling": "Sakura Sapling",
+  "block.maple.salt_ore": "Salt Ore",
   "block.maple.stripped_bamboo_block": "Stripped Bamboo Block",
   "block.maple.stripped_cherry_log": "Kérgezett cseresznyefarönk",
   "block.maple.stripped_cherry_wood": "Kérgezett cseresznyefablokk",
   "block.maple.stripped_maple_log": "Kérgezett juharfarönk",
   "block.maple.stripped_maple_wood": "Kérgezett juharfablokk",
+  "item.maple.anko_dango": "Anko Dango",
+  "item.maple.cherry_boat": "Cherry Boat",
+  "item.maple.cherry_chest_boat": "Cherry Chest Boat",
+  "item.maple.cooked_rice": "Cooked Rice",
+  "item.maple.cream": "Cream",
+  "item.maple.flour": "Liszt",
   "item.maple.high_glass_cup": "Magas üvegpohár",
-  "itemGroup.maple.maple_group": "Maple"
+  "item.maple.kinako_dango": "Kinako Dango",
+  "item.maple.maple_boat": "Maple Boat",
+  "item.maple.maple_chest_boat": "Maple Chest Boat",
+  "item.maple.maple_syrup": "Maple Syrup",
+  "item.maple.milk_bottom": "Bottom Milk",
+  "item.maple.milk_icecream": "Milk IceCream",
+  "item.maple.mochi": "Mochi",
+  "item.maple.rice": "Rice",
+  "item.maple.sakura_mochi": "Sakura Mochi",
+  "item.maple.salt": "Salt",
+  "item.maple.sanshoku_dango": "Sanshoku Dango",
+  "item.maple.soybean": "SoyBeam",
+  "item.maple.tofu": "Tofu",
+  "item.maple.zunda_dango": "Zunda Dango",
+  "itemGroup.maple.maple_group": "Maple",
+  "itemGroup.maple.maple_group_food": "Maple Food"
 }
-
