Fix forge server crash.(#24) Fix lang files.(#23)

--- a/src/main/resources/assets/maple/lang/en_us.json
+++ b/src/main/resources/assets/maple/lang/en_us.json
@@ -27,6 +27,7 @@
   "block.maple.cherry_stairs": "Cherry Stairs",
   "block.maple.cherry_trapdoor": "Cherry Trapdoor",
   "block.maple.cherry_wood": "Cherry Wood",
+  "block.maple.chiseled_bookshelf": "Chiseled Bookshelf",
   "block.maple.deepslate_salt_ore": "Deepslate Salt Ore",
   "block.maple.maple_button": "Maple Button",
   "block.maple.maple_door": "Maple Door",
@@ -42,6 +43,7 @@
   "block.maple.maple_stairs": "Maple Stairs",
   "block.maple.maple_trapdoor": "Maple Trapdoor",
   "block.maple.maple_wood": "Maple Wood",
+  "block.maple.pink_petals": "Pink Petals",
   "block.maple.potted_cherry_sapling": "Potted Cherry Sapling",
   "block.maple.potted_maple_sapling": "Potted Maple Sapling",
   "block.maple.potted_sakura_sapling": "Potted Sakura Sapling",
@@ -55,11 +57,15 @@
   "block.maple.stripped_maple_log": "Stripped Maple Log",
   "block.maple.stripped_maple_wood": "Stripped Maple Wood",
   "item.maple.anko_dango": "Anko Dango",
+  "item.maple.cherry_boat": "Cherry Boat",
+  "item.maple.cherry_chest_boat": "Cherry Chest Boat",
   "item.maple.cooked_rice": "Cooked Rice",
   "item.maple.cream": "Cream",
   "item.maple.flour": "Flour",
   "item.maple.high_glass_cup": "High Glass Cup",
   "item.maple.kinako_dango": "Kinako Dango",
+  "item.maple.maple_boat": "Maple Boat",
+  "item.maple.maple_chest_boat": "Maple Chest Boat",
   "item.maple.maple_syrup": "Maple Syrup",
   "item.maple.milk_bottom": "Bottom Milk",
   "item.maple.milk_icecream": "Milk IceCream",
