--- a/src/main/resources/assets/maple/lang/zh_cn.json
+++ b/src/main/resources/assets/maple/lang/zh_cn.json
@@ -27,6 +27,7 @@
   "block.maple.cherry_stairs": "樱木楼梯",
   "block.maple.cherry_trapdoor": "樱木活版门",
   "block.maple.cherry_wood": "樱树木",
+  "block.maple.chiseled_bookshelf": "雕纹书架",
   "block.maple.deepslate_salt_ore": "深板岩盐矿石",
   "block.maple.maple_button": "枫木按钮",
   "block.maple.maple_door": "枫木门",
@@ -42,6 +43,7 @@
   "block.maple.maple_stairs": "枫木楼梯",
   "block.maple.maple_trapdoor": "枫木活版门",
   "block.maple.maple_wood": "枫树木",
+  "block.maple.pink_petals": "粉红色花簇",
   "block.maple.potted_cherry_sapling": "樱木树苗盆栽",
   "block.maple.potted_maple_sapling": "枫木树苗盆栽",
   "block.maple.potted_sakura_sapling": "樱花树苗盆栽",
@@ -55,11 +57,15 @@
   "block.maple.stripped_maple_log": "去皮枫树原木",
   "block.maple.stripped_maple_wood": "去皮枫树木",
   "item.maple.anko_dango": "豆沙团子",
+  "item.maple.cherry_boat": "樱木船",
+  "item.maple.cherry_chest_boat": "樱木箱船",
   "item.maple.cooked_rice": "熟米饭",
   "item.maple.cream": "奶油",
   "item.maple.flour": "面粉",
   "item.maple.high_glass_cup": "高玻璃杯",
   "item.maple.kinako_dango": "豆粉团子",
+  "item.maple.maple_boat": "枫木船",
+  "item.maple.maple_chest_boat": "枫木箱船",
   "item.maple.maple_syrup": "枫糖浆",
   "item.maple.milk_bottom": "瓶装牛奶",
   "item.maple.milk_icecream": "牛奶冰激凌",
