--- a/src/main/resources/assets/maple/lang/zh_tw.json
+++ b/src/main/resources/assets/maple/lang/zh_tw.json
@@ -27,6 +27,7 @@
   "block.maple.cherry_stairs": "櫻木樓梯",
   "block.maple.cherry_trapdoor": "櫻木活版門",
   "block.maple.cherry_wood": "櫻樹木",
+  "block.maple.chiseled_bookshelf": "雕紋書架",
   "block.maple.deepslate_salt_ore": "深板岩鹽礦石",
   "block.maple.maple_button": "楓木按鈕",
   "block.maple.maple_door": "楓木門",
@@ -42,6 +43,7 @@
   "block.maple.maple_stairs": "楓木樓梯",
   "block.maple.maple_trapdoor": "楓木活版門",
   "block.maple.maple_wood": "楓樹木",
+  "block.maple.pink_petals": "粉紅色花簇",
   "block.maple.potted_cherry_sapling": "櫻木樹苗盆栽",
   "block.maple.potted_maple_sapling": "楓木樹苗盆栽",
   "block.maple.potted_sakura_sapling": "櫻花樹苗盆栽",
@@ -55,11 +57,15 @@
   "block.maple.stripped_maple_log": "去皮楓樹原木",
   "block.maple.stripped_maple_wood": "去皮楓樹木",
   "item.maple.anko_dango": "豆沙團子",
+  "item.maple.cherry_boat": "櫻木船",
+  "item.maple.cherry_chest_boat": "櫻木箱船",
   "item.maple.cooked_rice": "熟米飯",
   "item.maple.cream": "奶油",
   "item.maple.flour": "麵粉",
   "item.maple.high_glass_cup": "高玻璃杯",
   "item.maple.kinako_dango": "豆粉糰子",
+  "item.maple.maple_boat": "楓木船",
+  "item.maple.maple_chest_boat": "楓木箱船",
   "item.maple.maple_syrup": "楓糖漿",
   "item.maple.milk_bottom": "瓶裝牛奶",
   "item.maple.milk_icecream": "牛奶冰激凌",
