--- a/src/main/resources/assets/maple/lang/zh_cn.json
+++ b/src/main/resources/assets/maple/lang/zh_cn.json
@@ -13,6 +13,14 @@
   "block.maple.bamboo_slab": "竹制台阶",
   "block.maple.bamboo_stairs": "竹制楼梯",
   "block.maple.bamboo_trapdoor": "竹制活版门",
+  "block.maple.black_stained_glass_slab": "黑色染色玻璃台阶",
+  "block.maple.black_stained_glass_stairs": "黑色染色玻璃楼梯",
+  "block.maple.blue_plaster": "蓝色灰浆",
+  "block.maple.blue_stained_glass_slab": "蓝色染色玻璃台阶",
+  "block.maple.blue_stained_glass_stairs": "蓝色染色玻璃楼梯",
+  "block.maple.brown_plaster": "棕色灰浆",
+  "block.maple.brown_stained_glass_slab": "棕色染色玻璃台阶",
+  "block.maple.brown_stained_glass_stairs": "棕色染色玻璃楼梯",
   "block.maple.cherry_button": "樱木按钮",
   "block.maple.cherry_door": "樱木门",
   "block.maple.cherry_fence": "樱木栏杆",
@@ -27,11 +35,63 @@
   "block.maple.cherry_stairs": "樱木楼梯",
   "block.maple.cherry_trapdoor": "樱木活版门",
   "block.maple.cherry_wood": "樱树木",
+  "block.maple.chiseled_bookshelf": "雕纹书架",
+  "block.maple.coal_ore": "下届煤矿石",
+  "block.maple.copper_ore": "下届铜矿石",
+  "block.maple.cyan_plaster": "青色灰浆",
+  "block.maple.cyan_stained_glass_slab": "青色染色玻璃台阶",
+  "block.maple.cyan_stained_glass_stairs": "青色染色玻璃楼梯",
   "block.maple.deepslate_salt_ore": "深板岩盐矿石",
+  "block.maple.diamond_ore": "下届钻石矿石",
+  "block.maple.emerald_ore": "下届绿宝石矿石",
+  "block.maple.ginkgo_button": "银杏木按钮",
+  "block.maple.ginkgo_carpet": "银杏落叶",
+  "block.maple.ginkgo_door": "银杏木门",
+  "block.maple.ginkgo_fence": "银杏木栏杆",
+  "block.maple.ginkgo_fence_gate": "银杏木栏杆门",
+  "block.maple.ginkgo_hanging_sign": "悬挂式银杏木告示牌",
+  "block.maple.ginkgo_leaves": "银杏树叶",
+  "block.maple.ginkgo_log": "银杏树原木",
+  "block.maple.ginkgo_planks": "银杏木木板",
+  "block.maple.ginkgo_pressure_plate": "银杏木压力板",
+  "block.maple.ginkgo_sapling": "银杏木树苗",
+  "block.maple.ginkgo_sign": "银杏木告示牌",
+  "block.maple.ginkgo_slab": "银杏木台阶",
+  "block.maple.ginkgo_stairs": "银杏木楼梯",
+  "block.maple.ginkgo_trapdoor": "银杏木活版门",
+  "block.maple.ginkgo_wood": "银杏树木",
+  "block.maple.glass_slab": "玻璃台阶",
+  "block.maple.glass_stairs": "玻璃楼梯",
+  "block.maple.gold_ore": "下届金矿石",
+  "block.maple.gold_sea_lantern": "镶金海晶灯",
+  "block.maple.gray_plaster": "灰色灰浆",
+  "block.maple.gray_stained_glass_slab": "灰色染色玻璃台阶",
+  "block.maple.gray_stained_glass_stairs": "灰色染色玻璃楼梯",
+  "block.maple.green_plaster": "绿色灰浆",
+  "block.maple.green_stained_glass_slab": "绿色染色玻璃台阶",
+  "block.maple.green_stained_glass_stairs": "绿色染色玻璃楼梯",
+  "block.maple.hot_spring_block": "温泉",
+  "block.maple.iron_ore": "下届铁矿石",
+  "block.maple.iron_sea_lantern": "镶嵌海晶灯",
+  "block.maple.lapis_ore": "下届青金石矿石",
+  "block.maple.light_blue_plaster": "淡蓝色灰浆",
+  "block.maple.light_blue_stained_glass_slab": "淡蓝色染色玻璃台阶",
+  "block.maple.light_blue_stained_glass_stairs": "淡蓝色染色玻璃楼梯",
+  "block.maple.light_gray_plaster": "淡灰色灰浆",
+  "block.maple.light_gray_stained_glass_slab": "淡灰色染色玻璃台阶",
+  "block.maple.light_gray_stained_glass_stairs": "淡灰色染色玻璃楼梯",
+  "block.maple.lime_plaster": "黄绿色灰浆",
+  "block.maple.lime_stained_glass_slab": "黄绿色染色玻璃台阶",
+  "block.maple.lime_stained_glass_stairs": "黄绿色染色玻璃楼梯",
+  "block.maple.magenta_plaster": "品红色灰浆",
+  "block.maple.magenta_stained_glass_slab": "品红色染色玻璃台阶",
+  "block.maple.magenta_stained_glass_stairs": "品红色染色玻璃楼梯",
   "block.maple.maple_button": "枫木按钮",
+  "block.maple.maple_carpet": "枫落叶",
   "block.maple.maple_door": "枫木门",
   "block.maple.maple_fence": "枫木栏杆",
   "block.maple.maple_fence_gate": "枫木栏杆门",
+  "block.maple.maple_hanging_sign": "悬挂式枫木告示牌",
   "block.maple.maple_leaves": "枫树叶",
   "block.maple.maple_log": "枫树原木",
   "block.maple.maple_planks": "枫木木板",
@@ -42,24 +102,75 @@
   "block.maple.maple_stairs": "枫木楼梯",
   "block.maple.maple_trapdoor": "枫木活版门",
   "block.maple.maple_wood": "枫树木",
+  "block.maple.orange_plaster": "橙色灰浆",
+  "block.maple.orange_stained_glass_slab": "橘色染色玻璃台阶",
+  "block.maple.orange_stained_glass_stairs": "橘色染色玻璃楼梯",
+  "block.maple.pink_petals": "粉红色花簇",
+  "block.maple.pink_plaster": "粉色灰浆",
+  "block.maple.pink_stained_glass_slab": "粉红色染色玻璃台阶",
+  "block.maple.pink_stained_glass_stairs": "粉红色染色玻璃楼梯",
+  "block.maple.plaster": "灰浆",
   "block.maple.potted_cherry_sapling": "樱木树苗盆栽",
-  "block.maple.potted_maple_sapling": "枫木树苗盆栽",
+  "block.maple.potted_ginkgo_sapling": "银杏木树苗盆栽",
+  "block.maple.potted_maple_sapling": "红枫枫木树苗盆栽",
+  "block.maple.potted_red_maple_sapling": "枫木树苗盆栽",
   "block.maple.potted_sakura_sapling": "樱花树苗盆栽",
+  "block.maple.purple_plaster": "紫色灰浆",
+  "block.maple.purple_stained_glass_slab": "紫色染色玻璃台阶",
+  "block.maple.purple_stained_glass_stairs": "紫色染色玻璃楼梯",
+  "block.maple.red_maple_carpet": "红枫落叶",
+  "block.maple.red_maple_leaves": "红枫枫树叶",
+  "block.maple.red_maple_sapling": "红枫枫木树苗",
+  "block.maple.red_plaster": "红色灰浆",
+  "block.maple.red_stained_glass_slab": "红色染色玻璃台阶",
+  "block.maple.red_stained_glass_stairs": "红色染色玻璃楼梯",
+  "block.maple.redstone_ore": "下届红石矿石",
   "block.maple.rice_plant": "稻米作物",
+  "block.maple.sakura_carpet": "樱花落花",
   "block.maple.sakura_leaves": "樱花",
   "block.maple.sakura_sapling": "樱花树苗",
   "block.maple.salt_ore": "盐矿石",
   "block.maple.stripped_bamboo_block": "去皮竹块",
   "block.maple.stripped_cherry_log": "去皮樱树原木",
   "block.maple.stripped_cherry_wood": "去皮樱树木",
+  "block.maple.stripped_ginkgo_log": "去皮银杏树原木",
+  "block.maple.stripped_ginkgo_wood": "去皮银杏树木",
   "block.maple.stripped_maple_log": "去皮枫树原木",
   "block.maple.stripped_maple_wood": "去皮枫树木",
+  "block.maple.tatami": "榻榻米",
+  "block.maple.tatami_slab": "榻榻米台阶",
+  "block.maple.white_stained_glass_slab": "白色染色玻璃台阶",
+  "block.maple.white_stained_glass_stairs": "白色染色玻璃楼梯",
+  "block.maple.yellow_plaster": "黄色灰浆",
+  "block.maple.yellow_stained_glass_slab": "黄色染色玻璃台阶",
+  "block.maple.yellow_stained_glass_stairs": "黄色染色玻璃楼梯",
+  "gamerule.HotSpringSourceConversion": "允许流动温泉转换成温泉源",
   "item.maple.anko_dango": "豆沙团子",
+  "item.maple.beef_rice": "牛肉饭",
+  "item.maple.cheese": "芝士",
+  "item.maple.cherry_axe": "樱斧",
+  "item.maple.cherry_boat": "樱木船",
+  "item.maple.cherry_boots": "樱靴子",
+  "item.maple.cherry_chest_boat": "樱木箱船",
+  "item.maple.cherry_chestplate": "樱胸甲",
+  "item.maple.cherry_helmet": "樱头盔",
+  "item.maple.cherry_hoe": "樱锄",
+  "item.maple.cherry_ingot": "樱锭",
+  "item.maple.cherry_leggings": "樱护腿",
+  "item.maple.cherry_nugget": "樱粒",
+  "item.maple.cherry_pickaxe": "樱稿",
+  "item.maple.cherry_shovel": "樱锹",
+  "item.maple.cherry_sword": "樱剑",
   "item.maple.cooked_rice": "熟米饭",
   "item.maple.cream": "奶油",
   "item.maple.flour": "面粉",
+  "item.maple.ginkgo_boat": "银杏木船",
+  "item.maple.ginkgo_chest_boat": "银杏木箱船",
   "item.maple.high_glass_cup": "高玻璃杯",
+  "item.maple.hot_spring_bucket": "温泉桶",
   "item.maple.kinako_dango": "豆粉团子",
+  "item.maple.maple_boat": "枫木船",
+  "item.maple.maple_chest_boat": "枫木箱船",
   "item.maple.maple_syrup": "枫糖浆",
   "item.maple.milk_bottom": "瓶装牛奶",
   "item.maple.milk_icecream": "牛奶冰激凌",
@@ -68,6 +179,16 @@
   "item.maple.sakura_mochi": "樱花麻糬",
   "item.maple.salt": "盐",
   "item.maple.sanshoku_dango": "三彩团子",
+  "item.maple.snowball_compression": "雪球(混合)",
+  "item.maple.snowball_confusion": "雪球(混乱)",
+  "item.maple.snowball_diamond": "雪球(钻石)",
+  "item.maple.snowball_gold": "雪球(金)",
+  "item.maple.snowball_ice": "雪球(冰)",
+  "item.maple.snowball_instant_health": "雪球(瞬间治疗)",
+  "item.maple.snowball_iron": "雪球(铁)",
+  "item.maple.snowball_poison": "雪球(毒)",
+  "item.maple.snowball_stone": "雪球(石)",
+  "item.maple.snowball_teleporting": "雪球(瞬移)",
   "item.maple.soybean": "黄豆",
   "item.maple.tofu": "豆腐",
   "item.maple.zunda_dango": "豆打团子",
